# subset-mixture-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: ablation_alpha.py  ablation_kway.py  generate_bv_figure.py  generate_figures.py  run_experiments.py  run_multiseed.py  synthetic_recovery.py
smm/: __init__.py  laplace.py  model.py  predictor.py  subset_maker.py
tests/: test_smm.py
