[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subset-mixture-model"
version = "0.1.0"
description = "Interpretable empirical-Bayes aggregation of partition estimators for categorical regression"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Aaron John Danielson", email = "aaron.danielson@austin.utexas.edu" },
]
keywords = [
  "interpretable machine learning",
  "categorical features",
  "empirical Bayes",
  "uncertainty quantification",
  "mixture model",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.11",
]

[project.optional-dependencies]
experiments = [
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "joblib>=1.3",
  "lightgbm>=4.0",
  "ngboost>=0.4",
  "mapie>=0.6",
]
dev = [
  "pytest>=7",
  "pytest-cov",
]

[project.urls]
Repository = "https://github.com/aaronjdanielson/subset-mixture-model"

[tool.setuptools.packages.find]
where = ["."]
include = ["smm*"]
